# Komp-LAB

./: .gitignore  README.md
Primes/: README.md
Primes/src/: gen_primes.py  prime_noise.py  test.py
QSAT/: .gitignore  README.md
QSAT/qdimacs/: formula_1.txt  qbf_0.random.txt  qbf_1.txt  qbf_10.txt  qbf_11.txt  qbf_12.txt  qbf_13.txt  qbf_14.txt  qbf_15.txt  qbf_16.txt  qbf_17.txt  qbf_18.txt  qbf_19.txt  qbf_7.txt  qbf_9.txt
QSAT/src/: gen_qbf.py  qdpll.py
SAT/: .gitignore  README.md  cnf.py  gen_cnfs.sh  log.txt  random_cnf.py  render.sh
SAT/cnfs/: ex_cov_0.txt  ex_cov_1.txt  ex_cov_2.txt  (+10 more)
TuringMachines/: .gitignore  README.md  pyproject.toml
TuringMachines/demo/: save_runtimes.py  symbolic_regression.py
TuringMachines/inputs/: inputs_task2.txt  inputs_task2_worst.txt
TuringMachines/machines/: copy.txt  copy_compressed.txt  task1.txt  tm2.txt
TuringMachines/maps/: task1_compressed_map.txt
TuringMachines/runtimes/: runtime_task2a_compressed.npy
TuringMachines/src/: compress.py  test.py  tm.py
TuringMachines/src/turing_machines/: __init__.py  compress.py  runtime.py  tape.py  test.py  tm.py  transitions.py
machines/: Verdopplung1.txt  copy_compressed.txt  multichars.txt  task1_compressed.txt  task2b.txt  tm1.txt  tm5.txt
maps/: task2a_compressed_map.txt
src/: display.py  gen_inputs.py  tape.py
unnamed_chapter/: README.md
week_01/: README.md  Verdopplung1.txt  tm-multitape.py  tm.py  tm1.txt  tm2.txt
week_02/: README.md  cool_inputs.py  inputs_task1.txt  inputs_task2.txt  runtime.py  task2a.txt  tm-multitape.py  tm.py  tm4.txt
(+74 files in other folders)
